{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 13,
  "lineage": "1fe0ad65-50bb-3e94-09f3-b408eb1e6819",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af6e2b3ada249943",
            "arn": "arn:aws:ec2:us-west-2:007229802613:instance/i-0e51d42da3f2c6396",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e51d42da3f2c6396",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-081d290e34d816fb7",
            "private_dns": "ip-10-0-1-70.us-west-2.compute.internal",
            "private_ip": "10.0.1.70",
            "public_ip": "35.86.83.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f107b9b5b6a5ef7a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02bc14b01f6034903",
            "tags": {
              "Name": "CloudAcademy"
            },
            "tags_all": {
              "Name": "CloudAcademy"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d11b4e5cb6e0282e"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007229802613:internet-gateway/igw-0bd31a896a17c9e89",
            "id": "igw-0bd31a896a17c9e89",
            "owner_id": "007229802613",
            "tags": {
              "Name": "Main",
              "Owner": "CloudAcademy"
            },
            "tags_all": {
              "Name": "Main",
              "Owner": "CloudAcademy"
            },
            "vpc_id": "vpc-09a38f7070686307e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007229802613:route-table/rtb-079e71628ee98d8f6",
            "id": "rtb-079e71628ee98d8f6",
            "owner_id": "007229802613",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd31a896a17c9e89",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a38f7070686307e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9539d1eea3da0a5",
            "route_table_id": "rtb-079e71628ee98d8f6",
            "subnet_id": "subnet-02bc14b01f6034903"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.rt1",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ddedb9ff6a26cfa",
            "route_table_id": "rtb-079e71628ee98d8f6",
            "subnet_id": "subnet-0832f0d64585c3cc2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.rt1",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007229802613:security-group/sg-0d11b4e5cb6e0282e",
            "description": "Webserver network traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d11b4e5cb6e0282e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80 from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "49.36.41.70/32"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Webserver",
            "name_prefix": "",
            "owner_id": "007229802613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow traffic"
            },
            "tags_all": {
              "Name": "Allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a38f7070686307e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007229802613:subnet/subnet-02bc14b01f6034903",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02bc14b01f6034903",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007229802613",
            "tags": {
              "Name": "Subnet1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Subnet1",
              "Type": "Public"
            },
            "vpc_id": "vpc-09a38f7070686307e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007229802613:subnet/subnet-0832f0d64585c3cc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0832f0d64585c3cc2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007229802613",
            "tags": {
              "Name": "Subnet2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Subnet2",
              "Type": "Public"
            },
            "vpc_id": "vpc-09a38f7070686307e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007229802613:vpc/vpc-09a38f7070686307e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d8d40f7ef60085e6",
            "default_route_table_id": "rtb-037d19c3f83a676bb",
            "default_security_group_id": "sg-05ae9a48337236870",
            "dhcp_options_id": "dopt-082a6b70",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09a38f7070686307e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-037d19c3f83a676bb",
            "owner_id": "007229802613",
            "tags": {
              "Demo": "Terraform",
              "Name": "CloudAcademy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "CloudAcademy"
            }
          }
        }
      ]
    }
  ]
}